[gd_scene load_steps=8 format=3 uid="uid://chhwm7slx40mc"]

[ext_resource type="Script" uid="uid://bar6mgrtcax2u" path="res://Main/Main.gd" id="1_2w1kt"]
[ext_resource type="PackedScene" uid="uid://b703y16r1yxoj" path="res://Main/quick_esc_listener.tscn" id="1_yh5la"]
[ext_resource type="PackedScene" uid="uid://c2pwpapbli546" path="res://Main_Game_Features/game_logic/game_cam/game_cam.tscn" id="5_ib3t1"]
[ext_resource type="Script" uid="uid://dk3g5ugf2yhp0" path="res://Misc_Scripts/Scenes/move_parallax.gd" id="5_liyct"]
[ext_resource type="PackedScene" uid="uid://efjob33rrb2s" path="res://Main/menu_ui/controller/ui_controller.tscn" id="6_liyct"]
[ext_resource type="PackedScene" uid="uid://b1jlm1yrlnyys" path="res://Main/music.tscn" id="7_ib3t1"]
[ext_resource type="Script" uid="uid://d3752cy5vxsf5" path="res://Misc_Scripts/Scenes/level_loader.gd" id="8_f6fdm"]

[node name="Main" type="Node"]
script = ExtResource("1_2w1kt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2.5, 2.5)
motion_offset = Vector2(4.00003e+06, 0)
motion_mirroring = Vector2(4590, 0)
script = ExtResource("5_liyct")

[node name="QuickEscListener" parent="." instance=ExtResource("1_yh5la")]

[node name="LevelLoader" type="Node" parent="."]
script = ExtResource("8_f6fdm")

[node name="game_cam" parent="LevelLoader" instance=ExtResource("5_ib3t1")]
position = Vector2(912, 480)
acceleration = 4.0
min_distance = 10.0

[node name="UIController" parent="." instance=ExtResource("6_liyct")]

[node name="Music" parent="." instance=ExtResource("7_ib3t1")]

[connection signal="level_menu_request" from="LevelLoader" to="." method="_on_level_loader_level_menu_request"]
[connection signal="deload_level_request" from="UIController" to="." method="_on_ui_controller_deload_level_request"]
[connection signal="level_request" from="UIController" to="." method="_on_level_request"]
[connection signal="next_level_request" from="UIController" to="." method="_on_next_level_request"]
[connection signal="quit_request" from="UIController" to="." method="_on_quit_request"]
[connection signal="reset_request" from="UIController" to="." method="_on_ui_controller_reset_request"]
